--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -77,7 +77,7 @@
                         if (item.Date < DateTime.Now && item.TypeOfEvent=="Public")
                         {
                             <tr>
-                                <td><a href="#" >@item.Title </a> </td>
+                                <td > @Html.ActionLink(item.Title,"EventInfo","EventInformation", new { title = item.Title })  </td>
                             </tr>
 
                         }
@@ -97,7 +97,7 @@
 
     <div class="col-sm-6">
         @if (Model.Count() > 0)
-        {
+                                        {
             <table id="upcomingEvents" class="table-bordered table table-striped" title="Upcoming Events">
                 <thead class="table-dark" id="upcoming">
                     <tr>
@@ -112,14 +112,16 @@
                         if (item.Date > DateTime.Now  && item.TypeOfEvent=="Public")
                         {
                             <tr>
-                                <td><a href="#"> @item.Title </a> </td>
+                                <td>@Html.ActionLink(item.Title,"EventInfo","EventInformation" ,new { title = item.Title }) </td>
                             </tr>
-
+                    
                         }
-                        
+
 
 
                     }
+
+
                 </tbody>
 
 
@@ -153,4 +155,4 @@
     </div>*@
 
 
-<script src="index.js"></script>
+<script type="text/javascript" src="index.js"></script>
