--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -67,7 +67,7 @@
             <table id="pastEvents" class="table-bordered table table-striped" title="Past Events">
                 <thead class="table-dark" id="past">
                     <tr>
-                        <th>Past Events</th>
+                        <th>Past (Public) Events</th>
                     </tr>
 
                 </thead>
@@ -101,7 +101,7 @@
             <table id="upcomingEvents" class="table-bordered table table-striped" title="Upcoming Events">
                 <thead class="table-dark" id="upcoming">
                     <tr>
-                        <th>Upcoming Events</th>
+                        <th>Upcoming (Public) Events</th>
                     </tr>
 
                 </thead>
