--- a/Views/LoggedIn/SignedIn.cshtml
+++ b/Views/LoggedIn/SignedIn.cshtml
@@ -57,7 +57,7 @@
                     <table id="pastEvents" class="table-bordered table table-striped" title="Past Events">
                         <thead class="table-dark" id="past">
                             <tr>
-                                <th>Past Events</th>
+                                <th>All Past Events</th>
                             </tr>
 
                         </thead>
@@ -91,7 +91,7 @@
                     <table id="upcomingEvents" class="table-bordered table table-striped" title="Upcoming Events">
                         <thead class="table-dark" id="upcoming">
                             <tr>
-                                <th>Upcoming Events</th>
+                                <th>All Upcoming Events</th>
                             </tr>
 
                         </thead>
