--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -43,10 +43,14 @@
 
 
     <footer class="border-top footer text-muted">
-        <div class="container" id="mainFooter">
+        <div class="container " id="mainFooter">
             &copy; 2022 - Book Reading Event Application
+            <a class="ml-5" target="_blank" href="https://helpdesk.nagarro.com">Customer-Support</a>
 
         </div>
+        @*<div >
+            
+        </div>*@
         
     </footer>
     <script src="~/lib/jquery/dist/jquery.js"></script>
