--- a/Views/LoggedIn/CreateEvent.cshtml
+++ b/Views/LoggedIn/CreateEvent.cshtml
@@ -75,36 +75,45 @@
 
 
             <!--<div class="form-group row " style="margin-top:40px ; margin-bottom:40px" >
-            <label asp-for="TypeOfEvent" class="control-label col-sm-4"></label>
+    <label asp-for="TypeOfEvent" class="control-label col-sm-4"></label>
 
-            <div class="form-check  " style="margin-left:20px">
-                <input class="form-control " for="TypeOfEvent" checked type="radio" name="type" value="Public" id="public" />
-                <label class="form-check-label" for="TypeOfEvent">Public</label>
-            </div>-->
+    <div class="form-check  " style="margin-left:20px">
+        <input class="form-control " for="TypeOfEvent" checked type="radio" name="type" value="Public" id="public" />
+        <label class="form-check-label" for="TypeOfEvent">Public</label>
+    </div>-->
             @*<span asp-validation-for="TypeOfEvent" class="text-danger"></span>*@
             <!--<div class="form-check" style="margin-left:40px">
-                <input class="form-control" for="TypeOfEvent" type="radio" name="type" value="Private" id="private" />
-                <label class="form-check-label" for="TypeOfEvent">Private</label>
-            </div>-->
+        <input class="form-control" for="TypeOfEvent" type="radio" name="type" value="Private" id="private" />
+        <label class="form-check-label" for="TypeOfEvent">Private</label>
+    </div>-->
             @*<span asp-validation-for="TypeOfEvent" class="text-danger"></span>*@
             <!--</div>-->
 
 
 
 
-
-
-
             <div class="form-group">
                 <label asp-for="InviteByEmail" class="control-label"></label>
-                <input asp-for="InviteByEmail" class="form-control" />
+                <input type="email" multiple asp-for="InviteByEmail" class="form-control" />
                 <span asp-validation-for="InviteByEmail" class="text-danger"></span>
             </div>
+
+
+
+            @*<div class="form-group">
+                <label asp-for="InviteByEmail" class="control-label"></label>
+                <input type="email" multiple="" asp-for="InviteByEmail" class="form-control" />
+                <span asp-validation-for="InviteByEmail" class="text-danger"></span>
+            </div>*@
+
             <div class="form-group">
                 <label asp-for="Email" class="control-label"></label>
-                <input asp-for="Email" class="form-control" placeholder="Enter your Email" />
+                <input type="email" asp-for="Email" class="form-control" placeholder="Enter your Email" />
                 <span asp-validation-for="Email" class="text-danger"></span>
             </div>
+
+
+
             <div class="form-group">
                 <input type="submit" value="Create" class="btn btn-primary" />
             </div>
