--- a/Views/EventInformation/Edit.cshtml
+++ b/Views/EventInformation/Edit.cshtml
@@ -34,7 +34,7 @@
 
             <div class="form-group">
                 <label asp-for="Date" class="control-label"></label>
-                <input asp-for="Date" class="form-control" />
+                <input type="date" asp-for="Date" class="form-control" />
                 <span asp-validation-for="Date" class="text-danger"></span>
             </div>
             <div class="form-group">
@@ -44,9 +44,11 @@
             </div>
             <div class="form-group">
                 <label asp-for="StartTime" class="control-label"></label>
-                <input type="time" asp-for="StartTime" class="form-control" />
+                <input type="number" min="00" max="23" asp-for="StartTime" class="form-control" />
                 <span asp-validation-for="StartTime" class="text-danger"></span>
             </div>
+
+
             <div class="form-group">
                 <label asp-for="TypeOfEvent" class="control-label ">Type Of Event </label>
                 <div class="form-control">
@@ -57,11 +59,10 @@
 
                 </div>
 
-
-
-                @*<input type="radio" value="Public" asp-for="TypeOfEvent" class="form-control" />*@
                 <span asp-validation-for="TypeOfEvent" class="text-danger"></span>
             </div>
+
+
             <div class="form-group">
                 <label asp-for="InviteByEmail" class="control-label"></label>
                 <input asp-for="InviteByEmail" class="form-control" />
