--- a/Views/LoggedIn/CreateEvent.cshtml
+++ b/Views/LoggedIn/CreateEvent.cshtml
@@ -35,7 +35,7 @@
             </div>
             <div class="form-group">
                 <label asp-for="Date" class="control-label"></label>
-                <input asp-for="Date" class="form-control" />
+                <input type="date" asp-for="Date" class="form-control" />
                 <span asp-validation-for="Date" class="text-danger"></span>
             </div>
             <div class="form-group">
@@ -54,12 +54,12 @@
 
             <div class="form-group">
                 <label asp-for="StartTime" class="control-label"></label>
-                <input asp-for="StartTime" class="form-control" />
+                <input type="number" min="00" max="23" asp-for="StartTime" class="form-control" />
                 <span asp-validation-for="StartTime" class="text-danger"></span>
             </div>
 
 
-            <div class="form-group row " style="margin-top:40px ; margin-bottom:40px">
+            @*<div class="form-group row " style="margin-top:40px ; margin-bottom:40px">
                 <label asp-for="TypeOfEvent" class="control-label col-sm-4"></label>
                 <div class="form-group">
                     Public
@@ -67,6 +67,19 @@
                     Private
                     @Html.RadioButtonFor(model => model.TypeOfEvent, "Private")
                 </div>
+            </div>*@
+
+            <div class="form-group">
+                <label asp-for="TypeOfEvent" class="control-label ">Type Of Event </label>
+                <div class="form-control">
+                    <label>Public</label>
+                    <input type="radio" asp-for="TypeOfEvent" value="Public" checked />
+                    <label class="ml-4">Private</label>
+                    <input type="radio" asp-for="TypeOfEvent" value="Private" />
+
+                </div>
+
+                <span asp-validation-for="TypeOfEvent" class="text-danger"></span>
             </div>
 
 
@@ -101,10 +114,10 @@
 
 
             @*<div class="form-group">
-                <label asp-for="InviteByEmail" class="control-label"></label>
-                <input type="email" multiple="" asp-for="InviteByEmail" class="form-control" />
-                <span asp-validation-for="InviteByEmail" class="text-danger"></span>
-            </div>*@
+            <label asp-for="InviteByEmail" class="control-label"></label>
+            <input type="email" multiple="" asp-for="InviteByEmail" class="form-control" />
+            <span asp-validation-for="InviteByEmail" class="text-danger"></span>
+        </div>*@
 
             <div class="form-group">
                 <label asp-for="Email" class="control-label"></label>
