--- a/Views/LoggedIn/EventsInvitedTo.cshtml
+++ b/Views/LoggedIn/EventsInvitedTo.cshtml
@@ -39,6 +39,12 @@
 
         </table>
 
+        <a class="btn btn-primary" asp-action="SignedIn" asp-controller="LoggedIn"  >Back</a>
+
+    }
+    else
+    {
+        <p>Not a single event is created</p>
     }
 
 </div>
