--- a/Views/EventInformation/Edit.cshtml
+++ b/Views/EventInformation/Edit.cshtml
@@ -8,100 +8,111 @@
 @if (User.Identity.IsAuthenticated)
 {
 
-@if ((User.FindFirst(ClaimTypes.Email).Value == "myadmin@bookevents.com" || Model.Email == User.FindFirst(ClaimTypes.Email).Value ) && Model.Date > DateTime.Now)
-{
-<h1>Edit</h1>
+    @if ((User.FindFirst(ClaimTypes.Email).Value == "myadmin@bookevents.com" || Model.Email == User.FindFirst(ClaimTypes.Email).Value) && Model.Date > DateTime.Today)
+    {
+        <h1>Edit</h1>
 
-@Html.Raw(ViewBag.edit)
+        @Html.Raw(ViewBag.edit)
 
-<h4>EventDetails</h4>
-<hr />
-<div class="row">
-    <div class="col-md-4">
-        <form asp-action="Edit">
-            <div asp-validation-summary="ModelOnly" class="text-danger"></div>
+        <h4>EventDetails</h4>
+        <hr />
+        <div class="row">
+            <div class="col-md-4">
+                <form asp-action="Edit">
+                    <div asp-validation-summary="ModelOnly" class="text-danger"></div>
 
-            <h4>@Model.Title</h4>
-            <input type="hidden" asp-for="Title" />
-
-
-            @*<div class="form-group">
-            <label asp-for="Title" class="control-label"></label>
-                <input type="hidden"  asp-for="Title" />
-            <span asp-validation-for="Title" class="text-danger"></span>
-        </div>*@
+                    <h4>@Model.Title</h4>
+                    <input type="hidden" asp-for="Title" />
 
 
-            <div class="form-group">
-                <label asp-for="Date" class="control-label"></label>
-                <input type="date" asp-for="Date" class="form-control" />
-                <span asp-validation-for="Date" class="text-danger"></span>
+                    @*<div class="form-group">
+                            <label asp-for="Title" class="control-label"></label>
+                                <input type="hidden"  asp-for="Title" />
+                            <span asp-validation-for="Title" class="text-danger"></span>
+                        </div>*@
+
+
+                    <div class="form-group">
+                        <label asp-for="Date" class="control-label"></label>
+                        <input type="date" asp-for="Date" class="form-control" />
+                        <span asp-validation-for="Date" class="text-danger"></span>
+                    </div>
+                    <div class="form-group">
+                        <label asp-for="Location" class="control-label"></label>
+                        <input asp-for="Location" class="form-control" />
+                        <span asp-validation-for="Location" class="text-danger"></span>
+                    </div>
+                    <div class="form-group">
+                        <label asp-for="StartTime" class="control-label"></label>
+                        <input type="number" min="00" max="23" asp-for="StartTime" class="form-control" />
+                        <span asp-validation-for="StartTime" class="text-danger"></span>
+                    </div>
+
+
+                    <div class="form-group">
+                        <label asp-for="TypeOfEvent" class="control-label ">Type Of Event </label>
+                        <div class="form-control">
+                            <label>Public</label>
+                            <input type="radio" asp-for="TypeOfEvent" value="Public" checked />
+                            <label class="ml-4">Private</label>
+                            <input type="radio" asp-for="TypeOfEvent" value="Private" />
+
+                        </div>
+
+                        <span asp-validation-for="TypeOfEvent" class="text-danger"></span>
+                    </div>
+
+
+                    <div class="form-group">
+                        <label asp-for="InviteByEmail" class="control-label"></label>
+                        <input asp-for="InviteByEmail" class="form-control" />
+                        <span asp-validation-for="InviteByEmail" class="text-danger"></span>
+                    </div>
+
+
+                    <div class="form-group">
+                        <label asp-for="Email" class="control-label"></label>
+                        @*<select >
+                                <option selected="selected" value="@User.FindFirst(ClaimTypes.Email).Value" >@User.FindFirst(ClaimTypes.Email).Value</option>
+                            </select>*@
+
+                        <input type="hidden" value="@Model.Email" asp-for="Email" class="form-control" />
+                        <span asp-validation-for="Email" class="text-danger"></span>
+                    </div>
+
+
+
+
+                    <div class="form-group">
+                        <input type="submit" value="Save" class="btn btn-primary" />
+                    </div>
+                </form>
             </div>
-            <div class="form-group">
-                <label asp-for="Location" class="control-label"></label>
-                <input asp-for="Location" class="form-control" />
-                <span asp-validation-for="Location" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <label asp-for="StartTime" class="control-label"></label>
-                <input type="number" min="00" max="23" asp-for="StartTime" class="form-control" />
-                <span asp-validation-for="StartTime" class="text-danger"></span>
-            </div>
+        </div>
 
+        <div>
+            <a class="btn btn-primary" asp-action="SignedIn" asp-controller="LoggedIn">Back</a>
+        </div>
 
-            <div class="form-group">
-                <label asp-for="TypeOfEvent" class="control-label ">Type Of Event </label>
-                <div class="form-control">
-                    <label>Public</label>
-                    <input type="radio" asp-for="TypeOfEvent" value="Public" checked />
-                    <label class="ml-4">Private</label>
-                    <input type="radio" asp-for="TypeOfEvent" value="Private" />
+    }
 
-                </div>
+    else
+    {
+        <p> You Can Only Edit The Event that is Created by You</p>
 
-                <span asp-validation-for="TypeOfEvent" class="text-danger"></span>
-            </div>
+        <!--<-->@*a class="btn btn-primary" asp-action="EventInfo" asp-controller="EventInformation">Back</a>*@
 
+        @Html.ActionLink("Back", "EventInfo", "EventInformation", new { title = Model.Title })
 
-            <div class="form-group">
-                <label asp-for="InviteByEmail" class="control-label"></label>
-                <input asp-for="InviteByEmail" class="form-control" />
-                <span asp-validation-for="InviteByEmail" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <label asp-for="Email" class="control-label"></label>
-                @*<select >
-                <option selected="selected" value="@User.FindFirst(ClaimTypes.Email).Value" >@User.FindFirst(ClaimTypes.Email).Value</option>
-            </select>*@
+    }
 
-                <input type="hidden" value="@User.FindFirst(ClaimTypes.Email).Value" asp-for="Email" class="form-control" />
-                <span asp-validation-for="Email" class="text-danger"></span>
-            </div>
-
-
-
-
-            <div class="form-group">
-                <input type="submit" value="Save" class="btn btn-primary" />
-            </div>
-        </form>
-    </div>
-</div>
-
-<div>
-    <a asp-action="Index">Back to List</a>
-</div>
 
 }
-
 else
 {
-    <p> You Cannot Edit this Event</p>
-}
+    <p> You Can Only Edit The Event that is Created by You </p>
+    
+    @Html.ActionLink("BACK", "Index", "Home")
+    
 
-
-}
-else
-{
-    <p> You have to create an Event to Edit </p>
 }
