--- a/Views/EventInformation/Edit.cshtml
+++ b/Views/EventInformation/Edit.cshtml
@@ -26,10 +26,10 @@
 
 
                     @*<div class="form-group">
-                            <label asp-for="Title" class="control-label"></label>
-                                <input type="hidden"  asp-for="Title" />
-                            <span asp-validation-for="Title" class="text-danger"></span>
-                        </div>*@
+            <label asp-for="Title" class="control-label"></label>
+                <input type="hidden"  asp-for="Title" />
+            <span asp-validation-for="Title" class="text-danger"></span>
+        </div>*@
 
 
                     <div class="form-group">
@@ -71,10 +71,35 @@
 
 
                     <div class="form-group">
+                        <label asp-for="Duration" class="control-label"></label>
+                        <input type="number" min="1" max="4" asp-for="Duration" class="form-control" />
+                        <span asp-validation-for="Duration" class="text-danger"></span>
+                    </div>
+
+
+
+
+                    <div class="form-group">
+                        <label asp-for="Description" class="control-label"></label>
+                        <input type="text" maxlength="50" asp-for="Description" class="form-control" />
+                        <span asp-validation-for="Description" class="text-danger"></span>
+                    </div>
+
+
+                    <div class="form-group">
+                        <label asp-for="OtherDetails" class="control-label"></label>
+                        <input type="text" maxlength="500" asp-for="OtherDetails" class="form-control" />
+                        <span asp-validation-for="OtherDetails" class="text-danger"></span>
+                    </div>
+
+
+
+
+                    <div class="form-group">
                         <label asp-for="Email" class="control-label"></label>
                         @*<select >
-                                <option selected="selected" value="@User.FindFirst(ClaimTypes.Email).Value" >@User.FindFirst(ClaimTypes.Email).Value</option>
-                            </select>*@
+                <option selected="selected" value="@User.FindFirst(ClaimTypes.Email).Value" >@User.FindFirst(ClaimTypes.Email).Value</option>
+            </select>*@
 
                         <input type="hidden" value="@Model.Email" asp-for="Email" class="form-control" />
                         <span asp-validation-for="Email" class="text-danger"></span>
@@ -98,7 +123,7 @@
 
     else
     {
-        <p> You Can Only Edit The Event that is Created by You</p>
+        <p> You Cannot Edit This Event </p>
 
         <!--<-->@*a class="btn btn-primary" asp-action="EventInfo" asp-controller="EventInformation">Back</a>*@
 
@@ -110,7 +135,7 @@
 }
 else
 {
-    <p> You Can Only Edit The Event that is Created by You </p>
+    <p> You Cannot Edit This Event </p>
     
     @Html.ActionLink("BACK", "Index", "Home")
     
