--- a/Views/LoggedIn/CreateEvent.cshtml
+++ b/Views/LoggedIn/CreateEvent.cshtml
@@ -29,7 +29,7 @@
 <div class="row">
     <div class="col-md-4 offset-4">
         <form asp-action="CreateEvent">
-            
+
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <div class="form-group">
                 @Html.Raw(ViewBag.create)
@@ -41,13 +41,9 @@
 
 
 
-
-
-
-
-
-
             </div>
+
+
             <div class="form-group">
                 <label asp-for="Date" class="control-label"></label>
                 <input type="date" asp-for="Date" class="form-control" />
@@ -122,7 +118,7 @@
 
             <div class="form-group">
                 <label asp-for="InviteByEmail" class="control-label"></label>
-                <input type="email" asp-for="InviteByEmail" class="form-control "  multiple />
+                <input type="email" asp-for="InviteByEmail" class="form-control " multiple />
                 <span asp-validation-for="InviteByEmail" class="text-danger"></span>
             </div>
 
@@ -135,14 +131,14 @@
         </div>*@
 
             @*<div class="form-group">
-                <label asp-for="Email" class="control-label"></label>
-                <input type="email" asp-for="Email" class="form-control" placeholder="Enter your Email" />
-                <span asp-validation-for="Email" class="text-danger"></span>
-            </div>*@
+            <label asp-for="Email" class="control-label"></label>
+            <input type="email" asp-for="Email" class="form-control" placeholder="Enter your Email" />
+            <span asp-validation-for="Email" class="text-danger"></span>
+        </div>*@
 
 
             <div class="form-group">
-                <label asp-for="Email" class="control-label"></label>
+                @*<label asp-for="Email" class="control-label"></label>*@
 
                 @*<select >
                 <option selected="selected" value="@User.FindFirst(ClaimTypes.Email).Value" >@User.FindFirst(ClaimTypes.Email).Value</option>
@@ -151,6 +147,42 @@
                 <input type="hidden" value="@User.FindFirst(ClaimTypes.Email).Value" asp-for="Email" class="form-control" />
                 <span asp-validation-for="Email" class="text-danger"></span>
             </div>
+
+
+
+            <div class="form-group">
+                <label asp-for="Duration" class="control-label"></label>
+                <input type="number" min="1" max="4" asp-for="Duration" class="form-control" />
+                <span asp-validation-for="Duration" class="text-danger"></span>
+            </div>
+
+
+
+
+            <div class="form-group">
+                <label asp-for="Description" class="control-label"></label>
+                <input type="text" maxlength="50" asp-for="Description" class="form-control" />
+                <span asp-validation-for="Description" class="text-danger"></span>
+            </div>
+
+
+            <div class="form-group">
+                <label asp-for="OtherDetails" class="control-label"></label>
+                <input type="text" maxlength="500" asp-for="OtherDetails" class="form-control" />
+                <span asp-validation-for="OtherDetails" class="text-danger"></span>
+            </div>
+
+
+
+
+
+
+
+
+
+
+
+
 
 
 
