--- a/Views/LoggedIn/EventsInvitedTo.cshtml
+++ b/Views/LoggedIn/EventsInvitedTo.cshtml
@@ -29,7 +29,7 @@
 
                     {
                         <tr>
-                            <td><a href="#">@item.Title </a> </td>
+                            <td> @Html.ActionLink(item.Title, "EventInfo", "EventInformation", new { title = item.Title }) </td>
                         </tr>
 
                     }
